# wagtail-user-workspace

./: LICENSE  README.md  manage.py  pyproject.toml  runtests.py
.github/workflows/: add-to-projects.yml  pypi-publish.yml  test-pypi-publish.yml
src/wagtail_user_workspace/: apps.py  checks.py  handlers.py  models.py  settings.py  utils.py
src/wagtail_user_workspace/management/commands/: createuserworkspaces.py
tests/: models.py  settings.py  test_checks.py  test_create_user_workspace.py  urls.py
tests/config/: base.py  dev.py
tests/fixtures/: users_workspaces_page_deleted.json
tests/migrations/: 0001_initial.py
